force-app/main/default/objects/OpportunityLineItem/fields/Aportaciones_2__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones_2__c</fullName>
    <description>Guarda el valor de Opportunity.PlanificacionComercial__r.PorcentajeAportaciones__c cuando se crea o modifica un Item de Oportunidad</description>
    <label>% Aportaciones</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>