force-app/main/default/objects/OpportunityLineItem/fields/Aportaciones__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones__c</fullName>
    <formula>IF(NOT(ISNULL(Aportaciones_2__c)),
Aportaciones_2__c,
Opportunity.PlanificacionComercial__r.PorcentajeAportaciones__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Aportaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>