force-app/main/default/objects/OpportunityLineItem/fields/Codigo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Producto__c</fullName>
    <formula>PricebookEntry.Product2.CodigoDeProductoBase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto*</label>
    <type>Text</type>
</CustomField>