force-app/main/default/objects/OpportunityLineItem/fields/Comentario_atendido__c.field-meta.xml
<CustomField>
    <fullName>Comentario_atendido__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el comentario hecho sobre un porducto de oportunidad ha sido atendido.</description>
    <label>Comentario atendido</label>
    <type>Checkbox</type>
</CustomField>