force-app/main/default/objects/OpportunityLineItem/fields/ComentarioPackagingNuevo__c.field-meta.xml
<CustomField>
    <fullName>ComentarioPackagingNuevo__c</fullName>
    <label>Comentario packaging nuevo</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>