force-app/main/default/objects/OpportunityLineItem/fields/ComentariosCatalogo__c.field-meta.xml
<CustomField>
    <fullName>ComentariosCatalogo__c</fullName>
    <label>Comentarios Catalogo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>