force-app/main/default/objects/OpportunityLineItem/fields/Convenio_2__c.field-meta.xml
<CustomField>
    <fullName>Convenio_2__c</fullName>
    <description>Guarda el valor de Opportunity.PlanificacionComercial__r.PorcentajeConvenio__c cuando se crea o modifica un Producto de Oportunidad</description>
    <label>% Convenio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>