force-app/main/default/objects/OpportunityLineItem/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <formula>IF(NOT(ISNULL(Convenio_2__c)),
Convenio_2__c,
Opportunity.PlanificacionComercial__r.PorcentajeConvenio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Convenio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>