force-app/main/default/objects/OpportunityLineItem/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <formula>CostoProducto__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>