force-app/main/default/objects/OpportunityLineItem/fields/CostoProducto__c.field-meta.xml
<CustomField>
    <fullName>CostoProducto__c</fullName>
    <label>Costo producto</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>