force-app/main/default/objects/OpportunityLineItem/fields/Cumple_min_margen__c.field-meta.xml
<CustomField>
    <fullName>Cumple_min_margen__c</fullName>
    <formula>UnitPrice &gt; CostoProducto__c / 0.80</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumple min margen</label>
    <type>Checkbox</type>
</CustomField>