force-app/main/default/objects/OpportunityLineItem/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(NOT(ISBLANK(EstudioOportunidad__c)),
IF(CreatedDate &gt; EstudioOportunidad__r.CreatedDate,
&quot;AGREGADO &quot; + TEXT(DAY(DATEVALUE(CreatedDate))) + &apos;/&apos; + TEXT(MONTH(DATEVALUE(CreatedDate))) + &apos;/&apos; + TEXT(YEAR(DATEVALUE(CreatedDate))),
IF(LastModifiedDate &gt; EstudioOportunidad__r.CreatedDate,
&quot;MODIFICADO &quot; + TEXT(DAY(DATEVALUE(LastModifiedDate))) + &apos;/&apos; + TEXT(MONTH(DATEVALUE(LastModifiedDate))) + &apos;/&apos; + TEXT(YEAR(DATEVALUE(LastModifiedDate))),
&quot;-&quot;
)
),
&quot;-&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>