force-app/main/default/objects/OpportunityLineItem/fields/Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Fabrica__c</fullName>
    <formula>PricebookEntry.Product2.Fabrica__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fabrica</label>
    <type>Text</type>
</CustomField>