force-app/main/default/objects/OpportunityLineItem/fields/IdFabrica__c.field-meta.xml
<CustomField>
    <fullName>IdFabrica__c</fullName>
    <formula>IF(PricebookEntry.Product2.Fabrica__c != null,
PricebookEntry.Product2.Fabrica__c,
PricebookEntry.Product2.ProductoDeFabrica__r.Fabrica__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Fábrica</label>
    <type>Text</type>
</CustomField>