force-app/main/default/objects/OpportunityLineItem/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>PricebookEntry.Product2.Thumb1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>