force-app/main/default/objects/OpportunityLineItem/fields/Importe_Neto__c.field-meta.xml
<CustomField>
    <fullName>Importe_Neto__c</fullName>
    <formula>TotalPrice - (TotalPrice * ( Aportaciones_2__c +  Convenio_2__c +  Porcentaje_Item__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>