force-app/main/default/objects/OpportunityLineItem/fields/IncrementoPorAportaciones__c.field-meta.xml
<CustomField>
    <fullName>IncrementoPorAportaciones__c</fullName>
    <formula>UnitPrice - ( UnitPrice * ( 1 - (Aportaciones__c + Convenio__c + Porcentaje_Item__c) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremento por aportaciones y convenio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>