force-app/main/default/objects/OpportunityLineItem/fields/Margen_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Margen_Estimado__c</fullName>
    <formula>1 - Costo_Total__c / Importe_Neto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Estimado (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>