force-app/main/default/objects/OpportunityLineItem/fields/Margen_minimo__c.field-meta.xml
<CustomField>
    <fullName>Margen_minimo__c</fullName>
    <formula>IF(Cumple_min_margen__c,
IMAGE(&quot;/servlet/servlet.FileDownload?file=015460000005imI&quot;, &quot;Cumple&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015460000005imH&quot;, &quot;NO Cumple&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen mínimo</label>
    <type>Text</type>
</CustomField>