force-app/main/default/objects/OpportunityLineItem/fields/Modificar_precio_manual__c.field-meta.xml
<CustomField>
    <fullName>Modificar_precio_manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificar precio manual</label>
    <type>Checkbox</type>
</CustomField>