force-app/main/default/objects/OpportunityLineItem/fields/Porcentaje_Item__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Item__c</fullName>
    <defaultValue>0</defaultValue>
    <description>% de descuento que aplica a la referencia específica. Incide en el calculo de márgenes.</description>
    <inlineHelpText>% de descuento que aplica a la referencia específica. Incide en el calculo de márgenes.</inlineHelpText>
    <label>% Puntual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>