force-app/main/default/objects/OpportunityLineItem/fields/Precio_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo__c</fullName>
    <label>Precio Mínimo</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>