force-app/main/default/objects/OpportunityLineItem/fields/Producto_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Producto_Packaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si en una oportunidad se modifica el packaging de un producto es aqui donde queda registrado el cambio.</description>
    <label>Producto Packaging</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>