force-app/main/default/objects/OpportunityLineItem/fields/RequierePackagingNuevo__c.field-meta.xml
<CustomField>
    <fullName>RequierePackagingNuevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere packaging nuevo</label>
    <type>Checkbox</type>
</CustomField>