force-app/main/default/objects/OpportunityLineItem/fields/Total_CBM__c.field-meta.xml
<CustomField>
    <fullName>Total_CBM__c</fullName>
    <formula>PricebookEntry.Product2.MasterboxM3_2__c  * Quantity /  PricebookEntry.Product2.Unidades_por_Masterbox2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CBM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>