force-app/main/default/objects/OpportunityLineItem/fields/Ultimo_Precio__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_Precio__c</fullName>
    <description>En caso de que el cliente haya comprado el producto anteriormente, marca el precio al que se le vendió en al última oportunidad cerrada ganada</description>
    <inlineHelpText>En caso de que el cliente haya comprado el producto anteriormente, marca el precio al que se le vendió en al última oportunidad cerrada ganada</inlineHelpText>
    <label>Último Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>